--- a/style.css
+++ b/style.css
@@ -1,7 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 20px;
+}
+
+body {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #3bc18b;
+}
+
+header {
+  margin-top: 100px;
+  background-color: white;
+
+  padding: 20px;
+}
+
+header h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+#funcionamento {
+  font-weight: lighter;
+  font-style: italic;
+  color: #525252;
+}
+
+main {
+  background-color: white;
+  padding: 0px 20px 20px 20px;
+}
+
 .selected {
   background-color: gray;
 }
 
 .completed {
-  text-decoration: line-through;
+  text-decoration: line-through solid rgb(0,0,0);
 }
