--- a/style.css
+++ b/style.css
@@ -9,30 +9,37 @@ body {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #3bc18b;
+  background-color: rgb(59 , 193 , 139);
 }
 
 header {
   margin-top: 100px;
   background-color: white;
-
   padding: 20px;
 }
 
 header h1 {
   font-size: 32px;
-  font-weight: bold;
+  font-weight: 1000;
 }
 
 #funcionamento {
-  font-weight: lighter;
+  font-weight: 100;
   font-style: italic;
-  color: #525252;
+  color: rgb(82 , 82 , 82);
 }
 
 main {
   background-color: white;
-  padding: 0px 20px 20px 20px;
+  padding: 0 20px 20px;
+}
+
+#criar-tarefa {
+  margin: 10px 0 20px;
+}
+
+#useful-buttons button {
+  margin-right: 10px;
 }
 
 .selected {
@@ -40,5 +47,5 @@ main {
 }
 
 .completed {
-  text-decoration: line-through solid rgb(0,0,0);
+  text-decoration: line-through solid black;
 }
