--- a/style.css
+++ b/style.css
@@ -23,10 +23,14 @@ header h1 {
   font-weight: 1000;
 }
 
-#funcionamento {
+#primeiro-funcionamento , #funcionamento {
   color: rgb(82 , 82 , 82);
   font-style: italic;
   font-weight: 100;
+}
+
+.bold {
+  font-weight: 600;
 }
 
 main {
