--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,35 @@
 * {
   box-sizing: border-box;
-  font-size: 20px;
+  font-size: 18px;
   margin: 0;
   padding: 0;
 }
 
 body {
   background-color: rgb(59 , 193 , 139);
-  margin-left: auto;
-  margin-right: auto;
+  margin: 100px auto;
   width: 70%;
 }
 
 header {
   background-color: white;
-  margin-top: 100px;
-  padding: 20px;
+  padding: 20px 25px;
 }
 
 header h1 {
-  font-size: 32px;
+  font-size: 1.75em;
   font-weight: 1000;
 }
 
-#primeiro-funcionamento , #funcionamento {
-  color: rgb(82 , 82 , 82);
+header ul {
   font-style: italic;
   font-weight: 100;
+}
+
+h2 {
+  color: rgb(115 , 115 , 115);
+  font-size: 1.15em;
+  font-weight: 800;
 }
 
 .bold {
@@ -35,7 +38,7 @@ header h1 {
 
 main {
   background-color: white;
-  padding: 0 20px 20px;
+  padding: 0 25px 20px;
 }
 
 #criar-tarefa {
@@ -47,7 +50,7 @@ main {
 }
 
 .selected {
-  background-color: gray;
+  background-color: rgb(182 , 182 , 182);
   font-weight: 600;
 }
 
@@ -59,6 +62,17 @@ main {
   margin-bottom: 50px;
 }
 
-#useful-buttons button {
+h3 {
+  color: rgb(115 , 115 , 115);
+  font-size: 1em;
+  font-weight: 800;
+  width: 100%;
+}
+
+#tasks-buttons button , #list-buttons button {
   margin-right: 10px;
+}
+
+#tasks-buttons {
+  margin-bottom: 20px;
 }
