--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,11 @@ main {
   margin-bottom: 50px;
 }
 
+#no-task-message {
+  margin: 0;
+  font-style: italic;
+}
+
 h3 {
   color: rgb(115 , 115 , 115);
   font-size: 1em;
